--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,13 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/flask-app1', '.' ]
 
-images:
-  - 'gcr.io/$PROJECT_ID/flask-app1'
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [ 'push', 'gcr.io/$PROJECT_ID/flask-app1']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: 
+    - run 
+    - image=gcr.io/$PROJECT_ID/flask-app1
+    - location=us-central-c
+    - cluster=flask
+    - namespace=flask
