--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,16 +3,25 @@ options:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/flask-app1', '.' ]
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/flask-app1', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/flask-app1']
+    args: ['push', 'gcr.io/$PROJECT_ID/flask-app1']
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args:   
-    - run 
-    - filename=gke.yaml
-    - image=gcr.io/$PROJECT_ID/flask-app1
-    - location=us-central-c
-    - cluster=flask
-    - namespace=flask
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'container'
+      - 'clusters'
+      - 'get-credentials'
+      - 'flask'
+      - '--zone=us-central1-c'
+      - '--project=$PROJECT_ID'
+
+  - name: 'gcr.io/cloud-builders/kubectl'
+    args:
+      - 'apply'
+      - '-f'
+      - 'gke.yaml'
+    env:
+      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=flask'
