--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,16 +2,30 @@ options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 
 steps:
+  # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/flask-app1', '.' ]
 
+  # Step 2: Push the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/flask-app1']
+    args: [ 'push', 'gcr.io/$PROJECT_ID/flask-app1' ]
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args: 
-    - run 
-    - image=gcr.io/$PROJECT_ID/flask-app1:lastest
-    - location=us-central-c
-    - cluster=flask
-    - namespace=flask
+  # Step 3: Authenticate with GKE
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'container'
+      - 'clusters'
+      - 'get-credentials'
+      - 'flask'
+      - '--zone=us-central1-c'
+      - '--project=$PROJECT_ID'
+
+  # Step 4: Deploy to GKE using kubectl
+  - name: 'gcr.io/cloud-builders/kubectl'
+    args: [ 'apply', '-f', 'gke.yaml' ]
+    env:
+      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=flask'
+
+images:
+  - 'gcr.io/$PROJECT_ID/flask-app1'
